@@ -23,6 +23,7 @@
     "remove_owned_wishlist": "Remove owned games from wishlist",
     "donate": "Donate",
     "close": "Close",
+    "go": "Go",
     "coupon_application_note": "A coupon in your inventory will be applied automatically at checkout.",
     "hide": "Hide",
     "cards_owned": "__owned__ of __possible__ cards owned",
